# adhan_time

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  tests.py
.github/workflows/: build.yml
app/: main.py
public/: index.html
public/assets/js/: main.js
scripts/: run.sh
